fix overflow for main

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ main {
   justify-content: center;
   align-items: center;
   flex: 1 0 0;
+  overflow: hidden;
 }
 
 nav.colors {
